# fdkaac

./: .gitignore  CMakeLists.txt  build.bat  build_ninja.bat
src/: main.c
